[package]
name = "scc"
description = "A collection of high-performance containers and utilities providing both asynchronous and synchronous interfaces"
documentation = "https://docs.rs/scc"
version = "3.2.1"
authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
edition = "2024"
rust-version = "1.85.0"
readme = "README.md"
repository = "https://github.com/wvwwvwwv/scalable-concurrent-containers/"
license = "Apache-2.0"
categories = ["asynchronous", "caching", "concurrency", "data-structures"]
keywords = ["async", "cache", "concurrent", "hashmap", "tree"]

[workspace]
members = [".", "examples", "extended_tests"]

[dependencies]
equivalent = { version = "1.0", optional = true }
loom = { version = "0.7", optional = true }
saa = "5.0"
sdd = "4.1"
serde = { version = "1.0", optional = true }

[features]
loom = ["dep:loom", "sdd/loom"]

[dev-dependencies]
criterion = "0.7"
futures = "0.3"
proptest = "1.7"
serde_test = "1.0"
static_assertions = "1.1"
tokio = { version = "1.47", features = ["full"] }

[[bench]]
name = "bag"
harness = false

[[bench]]
name = "hash_map"
harness = false

[[bench]]
name = "hash_index"
harness = false

[[bench]]
name = "hash_cache"
harness = false

[[bench]]
name = "tree_index"
harness = false
